# tlaps-bench

./: .dockerignore  .gitignore  .gitmodules  LICENSE  Makefile  NOTICE  PROOF_ANTIPATTERNS.md  README.md  benchmark_report.md  check_proof.py  generate_benchmarks.py  pyproject.toml  run_codex_benchmark.py  validate_benchmarks.py
.github/workflows/: ci.yml  docker-image.yml
benchmark/ByzantinePaxos/: BPConProof_BMessageLemma.tla  BPConProof_EnabledDef.tla  BPConProof_EventuallyAlwaysForall.tla  BPConProof_FiniteMsgsLemma.tla  BPConProof_GeneralNatInduction.tla  BPConProof_InductiveInvariance.tla  BPConProof_InductiveInvariance_1.tla  BPConProof_InitImpliesInv.tla  BPConProof_Invariance.tla  BPConProof_KnowsSafeAtDef.tla  BPConProof_LiveSpecEquals.tla  BPConProof_Liveness.tla  BPConProof_MaxBallotLemma1.tla  BPConProof_MaxBallotLemma2.tla  BPConProof_MaxBallotProp.tla  BPConProof_MsgsLemma.tla  BPConProof_MsgsTypeLemma.tla  BPConProof_MsgsTypeLemmaPrime.tla  BPConProof_NextDef.tla  BPConProof_NextDef_1.tla  BPConProof_NextDef_2.tla  BPConProof_OnePlusFinite.tla  BPConProof_PMaxBalLemma3.tla  BPConProof_PNextDef.tla  BPConProof_PmaxBalLemma1.tla  BPConProof_PmaxBalLemma2.tla  (+54 more)
codex_results/: comparison.md
docker/: Dockerfile  base-entrypoint.sh  base.Dockerfile  build.sh  copilot-config.example.json  docker-compose.yml  entrypoint.sh  firewall.sh
docs/: DATASET.md  USAGE.md
scripts/: dataset_table.py  import_tlaps_example.py  install_deps.sh  restore-session.sh  setup.sh  usage.sh
slides/: tlaps-benchmark-slides.md
unvalidated-proof-exercises/: README.md
(+2585 files in other folders)
