[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tlaps-bench"
version = "0.1.0"
description = "A benchmark for evaluating AI's ability to write TLAPS proofs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyinstaller>=6.21.0",
    "pytest",
    "ruff",
]

[project.scripts]
tlaps-bench = "tlaps_bench.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/tlacheck", "src/tlacore", "src/common", "src/evaluator", "src/dataset", "src/tlaps_bench"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 120

[tool.ruff]
line-length = 120
target-version = "py312"
src = ["src", "scripts", "tests"]
exclude = [
    ".venv",
    "build",
    "dist",
    "*.egg-info",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "E",    # pycodestyle errors
    "F",    # Pyflakes
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "I",    # isort
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "SIM102", # nested if statements
]

[tool.ruff.lint.per-file-ignores]
# These files manipulate sys.path before importing project modules
"tests/**/*.py" = ["E402"]

[tool.ruff.lint.isort]
known-first-party = ["common", "tlacheck", "tlacore", "evaluator", "dataset"]

[tool.ruff.format]
quote-style = "double"
docstring-code-format = true

[tool.ty.environment]
python = ".venv"
